lintian (2.0.0) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - package-superseded-by-perl
  
  * checks/copyright-file:
    + [FL] Also detect v1.1 of CeCILL license, not only v2.0.
      (Closes: #498994)
  * checks/fields{,.desc}:
    + [FL] Warn about Perl module packages superseded by Perl
      core.  Patch by Niko Tyni.  (Closes: #498897)
  * checks/scripts:
    + [FL] Accept the ocaml virtual packages as providing ocamlrun.
      Based on a patch by Stephane Glondu.  (Closes: #495431)
  
  * frontend/lintian:
    + [FL] Add support for ranges to --display-level.

 -- Frank Lichtenheld <djpig@debian.org>  Tue, 16 Sep 2008 19:34:29 +0200

lintian (2.0.0~rc1) experimental; urgency=low

  * [FL] Merge the results of the GSoC project by Jordà Polo,
    which fully implements a tag classification system in two
    dimensions (Severity and Certainty).
    The default output is unchanged, see the documentation on
    how to utilize the new features.
  
  * Summary of tag changes:
    + Added:
      - description-contains-dh-make-perl-template
      - doc-base-uses-applications-section (actually a split of
         doc-base-unknown-section in two tags)
      - embedded-pear-module
      - embedded-php-library
      - improbable-bug-number-in-closes
      - maintainer-also-in-uploaders
      - maintainer-script-ignores-errors
      - manpage-has-errors-from-pod2man
      - ored-build-depends-on-obsolete-package (actually a split of
         build-depends-on-obsolete-package in two tags)
      - versioned-dependency-satisfied-by-perl
      - windows-devel-file-in-package
    + Removed:
      - package-needs-python-policy-debhelper
  
  * checks/*.desc:
    + [ADB] Fix a number of spelling mistakes and typoes.
  * checks/changelog-file{,.desc}:
    + [RA] Warn about closing a bug number less than 100; this is likely
      a typo or placeholder.  Thanks, Raphael Geissert.  (Closes: #497350)
  * checks/debconf: